AM_GNU_GETTEXT: Use new build-to-host.m4 from gnulib.
* autogen.sh: Copy m4/build-to-host.m4 from gnulib.
* gettext-runtime/m4/Makefile.am (EXTRA_DIST): Add build-to-host.m4.
* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT): Simplify and fix bug on
Cygwin, by invoking gl_BUILD_TO_HOST.
* gettext-tools/m4/Makefile.am (aclocal_DATA): Add build-to-host.m4.
* gettext-tools/misc/gettextize.in (m4filelist): Add build-to-host.m4.
* Makefile.am (distcheck-hook): Check also build-to-host.m4.
* gettext-tools/doc/gettext.texi (aclocal): Mention also build-to-host.m4.
* PACKAGING: Mention build-to-host.m4.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@
 /gettext-runtime/intl/doc/relocatable.texi
 /gettext-runtime/libasprintf/gnulib-lib/
 /gettext-runtime/libasprintf/gnulib-m4/
+/gettext-runtime/m4/build-to-host.m4
 /gettext-runtime/man/x-to-1.in
 /gettext-tools/doc/relocatable.texi
 /gettext-tools/gnulib-m4/
