--- a/gettext-runtime/m4/Makefile.am
+++ b/gettext-runtime/m4/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime/m4 directory of GNU gettext
-## Copyright (C) 2003, 2005-2013, 2017-2020 Free Software Foundation, Inc.
+## Copyright (C) 2003, 2005-2013, 2017-2023 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -19,6 +19,7 @@
 # Generate this list with
 # find . -type f -name '*.m4' -printf '%f\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
 EXTRA_DIST = README \
+build-to-host.m4 \
 fcntl-o.m4 \
 flexmember.m4 \
 gettext.m4 \
