--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-# Copyright (C) 1995-1998, 2000-2022 Free Software Foundation, Inc.
+# Copyright (C) 1995-1998, 2000-2023 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -803,6 +803,7 @@ Please fill $podir/POTFILES.in as described in the documentation.
 done
 
 m4filelist='
+  build-to-host.m4
   gettext.m4
   host-cpu-c-abi.m4
   iconv.m4
