Distribute the source code of csharpexec-test.exe.
Reported by Bastien Roucariès <rouca@debian.org>
via Santiago Vila <sanvila@debian.org>
in <https://lists.gnu.org/archive/html/bug-gettext/2023-02/msg00016.html>.

* gettext-tools/m4/csharpexec-test.cs: New file, extracted from pre-2018
versions of gnulib/m4/csharpcomp.m4.
* gettext-tools/m4/Makefile.am (EXTRA_DIST): Add it.

--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -40,9 +40,11 @@ examplesbuildaux_DATA = \
   ../gnulib-m4/csharpcomp.m4 ../gnulib-m4/csharpexec.m4 csharpexec-test.exe
 
 # Generate this list with
-# find . -type f -name '*.m4' -printf '%f\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
-EXTRA_DIST = README csharpexec-test.exe \
-exported.m4 \
-hostname.m4 \
-locale-de.m4 \
-siginfo.m4
+# find . -type f -name '*.m4' -printf '  %f\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
+EXTRA_DIST = \
+  README \
+  csharpexec-test.cs csharpexec-test.exe \
+  exported.m4 \
+  hostname.m4 \
+  locale-de.m4 \
+  siginfo.m4
