xgettext: In language PO, handle non-ASCII non-UTF-8 input files correctly.
* gettext-tools/src/x-po.c: Include msgl-iconv.h, msgl-ascii.h, po-charset.h.
(extract): If a header charset is present, convert the messages to UTF-8;
otherwise verify that they are all ASCII.
* gettext-tools/tests/xgettext-po-3: New file.
* gettext-tools/tests/xgettext-po-4: New file.
* gettext-tools/tests/testdata/xg-po-3.po: New file.
* gettext-tools/tests/testdata/xg-po-4.po: New file.
* gettext-tools/tests/Makefile.am (TESTS, EXTRA_DIST): Add them.
* NEWS: Mention the change.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -132,7 +132,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-php-1 xgettext-php-2 xgettext-php-3 xgettext-php-4 \
 	xgettext-php-stackovfl-1 xgettext-php-stackovfl-2 \
 	xgettext-php-stackovfl-3 xgettext-php-stackovfl-4 \
-	xgettext-po-1 xgettext-po-2 \
+	xgettext-po-1 xgettext-po-2 xgettext-po-3 xgettext-po-4 \
 	xgettext-properties-1 xgettext-properties-2 xgettext-properties-3 \
 	xgettext-properties-4 \
 	xgettext-rst-1 xgettext-rst-2 \
@@ -227,7 +227,8 @@ EXTRA_DIST += init.sh init.cfg $(TESTS) \
 	xgettext-1 \
 	xgettext-c-1 xg-c-comment-6.c xg-c-escape-3.c xg-vala-2.vala \
 	common/supplemental/plurals.xml \
-	testdata/xg-el-so-3.el testdata/xg-el-so-4.el
+	testdata/xg-el-so-3.el testdata/xg-el-so-4.el \
+	testdata/xg-po-3.po testdata/xg-po-4.po
 
 XGETTEXT = ../src/xgettext
 
