xgettext: In language Shell, avoid a crash.
* gettext-tools/src/x-sh.c (phase1_pushback): Increase size by 1.
* gettext-tools/tests/xgettext-sh-8: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -149,7 +149,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-scheme-4 xgettext-scheme-5 xgettext-scheme-6 \
 	xgettext-scheme-stackovfl-1 xgettext-scheme-stackovfl-2 \
 	xgettext-sh-1 xgettext-sh-2 xgettext-sh-3 xgettext-sh-4 xgettext-sh-5 \
-	xgettext-sh-6 xgettext-sh-7 \
+	xgettext-sh-6 xgettext-sh-7 xgettext-sh-8 \
 	xgettext-sh-stackovfl-1 xgettext-sh-stackovfl-2 \
 	xgettext-sh-stackovfl-3 xgettext-sh-stackovfl-4 \
 	xgettext-sh-stackovfl-5 \
